# BNN_Anon

./: README.md  VisualizeResults.ipynb  adam_torch.py  extract_features.py  pyproject.toml  sgd_torch.py
src/: __init__.py  train.py
src/dataset/: __init__.py  binarization.py  cifar100_tl.py  cifar10_tl.py  custom_dataset.py  fmnist.py  imagenette_tl.py  prototypes.py  uci.json  uci.py  utils.py
src/dataset/abstract/: dataset.py
src/dataset/factory/: __init__.py  factory.py
src/layers/: __init__.py  flatten.py  layer.py  linear.py
src/subnet/: __init__.py  subnet.py
src/supernet/: __init__.py  supernet.py
